# EV_Battery_Thermal_Management_Controller

./: .clang-tidy  CMakeLists.txt  README.md  dashboard.py  requirements.txt  telemetry.csv  thermal_calibration.txt
.github/workflows/: ci.yml
app/: main.cpp
include/: BatteryTemperatureSensor.h  Calibration.h  ConfigLoader.h  IFanDriver.h  IPumpDriver.h  ITemperatureSensor.h  MockPumpDriver.h  MockTemperatureSensor.h  PumpDriver.h  battery_model.h  coolant_model.h  diagnostics.h  fault_manager.h  fault_types.h  pid_controller.h  telemetry_logger.h  telemetry_record.h  thermal_controller.h  thermal_inputs.h  watchdog.h
src/: BatteryTemperatureSensor.cpp  ConfigLoader.cpp  PumpDriver.cpp  battery_model.cpp  coolant_model.cpp  diagnostics.cpp  fault_manager.cpp  pid_controller.cpp  telemetry_logger.cpp  thermal_controller.cpp  watchdog.cpp
tests/: test_controller.cpp  test_diagnostics.cpp  test_pid.cpp
